--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,14 @@
+os: linux
+dist: xenial
 language: php
-
 php:
   - 7.4
-
 cache:
   directories:
     - vendor
     - $HOME/.composer/cache
-
 install:
   - composer install
   - composer setup
-
 script:
   - composer metrics
